# vulkan-practice

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE
assets/shaders/: triangle.frag  triangle.vert
cmake/: sanitizers.cmake  tools.cmake
src/: glfw_initialization.cpp  glfw_initialization.h  glfw_window.cpp  glfw_window.h  main.cpp  vk_app.cpp  vk_app.h
tests/: CMakeLists.txt  test_math.cpp  test_traits_raii.cpp
